Adding all the backend files

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ JWT_SECRET = mysecretkey
 
 NODE_ENV = development
 
+CLOUDINARY_CLOUD_NAME=ddg0ystfb
+CLOUDINARY_API_KEY=411711947581779
+CLOUDINARY_API_SECRET=d-k0FpX4njZkexvHeEx7bUolt4Y 
